add vienna4x22 as submodule; update notebooks

--- a/introduction/intro_music_cognition.ipynb
+++ b/introduction/intro_music_cognition.ipynb
@@ -29,8 +29,8 @@
     "import os\n",
     "from utils import InteractiveToneAnalyzer, load_audio, PATH\n",
     "\n",
-    "\n",
-    "%config InlineBackend.figure_format ='retina'\n",
+    "# For high-res figures\n",
+    "%config InlineBackend.figure_format = 'retina'\n",
     "\n",
     "from typing import Union, Callable, Dict, Any, Optional, Tuple\n",
     "\n",
@@ -120,7 +120,7 @@
     "    t = np.linspace(0, duration, int(SAMPLE_RATE * duration))\n",
     "    # Sine wave\n",
     "    y = np.sin(2 * np.pi * freq * t + phase)\n",
-    "    # y -= y.mean()\n",
+    "\n",
     "    # Renormalize to the specified amplitude\n",
     "    y = amplitude * y / np.max(y)\n",
     "\n",
@@ -605,7 +605,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "miws24",
    "language": "python",
    "name": "python3"
   },
