--- a/introduction/intro_music_cognition.ipynb
+++ b/introduction/intro_music_cognition.ipynb
@@ -147,6 +147,118 @@
   },
   {
    "cell_type": "markdown",
+   "id": "623262d6",
+   "metadata": {},
+   "source": [
+    "### Just Noticeable Difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "194265ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_sine_waves(delta_f: float = 0) -> Tuple[np.ndarray, np.ndarray]:\n",
+    "    fs = 44100\n",
+    "    t = np.linspace(0, 1, fs)\n",
+    "\n",
+    "    f1 = 440\n",
+    "    f2 = (1 + delta_f) * f1\n",
+    "\n",
+    "    # Generate two different tones\n",
+    "    signal1 = 0.5 * np.sin(2 * np.pi * f1 * t)  # A 440 Hz tone\n",
+    "    signal2 = 0.5 * np.sin(2 * np.pi * f2 * t)  # A 550 Hz tone\n",
+    "\n",
+    "    return signal1, signal2\n",
+    "\n",
+    "\n",
+    "# Function to display the audio players and the text input field for user response\n",
+    "def show_comparison(index: int, answers: np.ndarray, delta_f: float = 0) -> None:\n",
+    "    # Generate the signals\n",
+    "    signal1, signal2 = generate_sine_waves(delta_f)\n",
+    "\n",
+    "    # Create Output widgets to hold the Audio objects\n",
+    "    out1 = widgets.Output()\n",
+    "    out2 = widgets.Output()\n",
+    "\n",
+    "    with out1:\n",
+    "        ipd.display(ipd.Audio(data=signal1, rate=44100, autoplay=False))\n",
+    "    with out2:\n",
+    "        ipd.display(ipd.Audio(data=signal2, rate=44100, autoplay=False))\n",
+    "\n",
+    "    # Display the two outputs side by side\n",
+    "    hbox = widgets.HBox([out1, out2])\n",
+    "\n",
+    "    # Create input field for user to enter a response (a number)\n",
+    "    response = widgets.IntText(description=\"Your Answer:\")\n",
+    "\n",
+    "    # Create a button for submitting the answer\n",
+    "    button = widgets.Button(description=\"Submit\")\n",
+    "\n",
+    "    # Define a function to handle button click\n",
+    "    def on_button_click(b):\n",
+    "        # Store the response value when the button is clicked\n",
+    "        answers[index] = response.value\n",
+    "        print(f\"Answer recorded: {response.value}\")\n",
+    "        response.value = 0  # Clear input field for next comparison\n",
+    "\n",
+    "    button.on_click(on_button_click)\n",
+    "\n",
+    "    # Display everything\n",
+    "    ipd.display(hbox, response, button)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73b79a0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a list to store user answers\n",
+    "delta_semitone = 2 ** (1 / 12) - 1\n",
+    "\n",
+    "delta_fs = np.linspace(-delta_semitone, delta_semitone, 10)\n",
+    "delta_fs = np.random.normal(loc=0, scale=0.5 * delta_semitone, size=10)\n",
+    "delta_fs.sort()\n",
+    "answers = np.zeros(len(delta_fs))\n",
+    "sort_idxs = np.arange(len(delta_fs))\n",
+    "np.random.shuffle(sort_idxs)\n",
+    "# Display N comparisons (you can adjust N)\n",
+    "N = 5\n",
+    "for i, si in enumerate(sort_idxs):\n",
+    "    print(f\"Comparison {i+1}\")\n",
+    "    show_comparison(index=si, answers=answers, delta_f=delta_fs[si])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ab4ad28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(\n",
+    "    np.arange(len(answers)),\n",
+    "    answers,\n",
+    "    width=0.8,\n",
+    "    color=\"firebrick\",\n",
+    "    align=\"center\",\n",
+    ")\n",
+    "plt.xlabel(\"Delta freq\")\n",
+    "plt.ylabel(\"Votes\")\n",
+    "plt.xticks(\n",
+    "    np.arange(len(answers)),\n",
+    "    labels=[f\"{df:.1f}\" for df in delta_fs * 100],\n",
+    ")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c04b6a21",
    "metadata": {},
    "source": [
@@ -248,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "cbc07a89",
    "metadata": {},
    "outputs": [],
@@ -490,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "f55e9351",
    "metadata": {},
    "outputs": [],
