add missing figure in repo

--- a/alignment/Symbolic_Music_Alignment.ipynb
+++ b/alignment/Symbolic_Music_Alignment.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "* **Online**: Alignment of a live (i.e., real time) performance to the music encoded in a target document (e.g., a pre-annotated audio recording, a symbolic score, etc.). The problem of real time online alignment is known in the MIR literature a **score following**, and can be useful in live interactive settings, such as automatic accompaniment systems\n",
     "\n",
-    "In this tutorial we are going to focus on the case of offline alignment."
+    "In this tutorial we are going to focus on the case of **offline alignment**."
    ]
   },
   {
