--- a/expectation/rnn_melodic_expectation.ipynb
+++ b/expectation/rnn_melodic_expectation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/MusicalInformatics/miws23/blob/main/expectation/rnn_melodic_expectation.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/MusicalInformatics/miws2024/blob/main/expectation/rnn_melodic_expectation.ipynb)"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rnn import load_data\n",
+    "from utils import load_data\n",
     "\n",
     "# To filter out short melodies The minimum number of notes that a sequence should have\n",
     "min_seq_len = 10\n",
