--- a/expectation/intro_to_deep_learning.ipynb
+++ b/expectation/intro_to_deep_learning.ipynb
@@ -452,10 +452,6 @@
     "- $p_i$ is the predicted probability of the sample being in class $i$.\n",
     "\n",
     "The loss function penalizes incorrect predictions more as the probability for the correct class decreases, encouraging the model to assign higher probabilities to correct classes.\n",
-    "\n",
-    "#### Why Cross Entropy?\n",
-    "\n",
-    "If the model confidently predicts the correct class (i.e., assigns a high probability close to 1 for the correct class), the cross-entropy loss will be low. However, if the model predicts a low probability for the correct class, the loss will be high. This loss function is particularly effective for training neural networks to output probabilities that align closely with the ground truth.\n",
     "\n"
    ]
   },
@@ -465,8 +461,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "\n",
-    "### Visualizing Cross Entropy Loss\n",
     "\n",
     "To illustrate Cross Entropy Loss, let’s plot how the loss changes with different predicted probabilities for a correct class label. A lower probability for the correct class leads to a higher loss, whereas a probability closer to 1 leads to a lower loss.\n",
     "\n"
@@ -504,9 +498,7 @@
    "source": [
     "\n",
     "\n",
-    "The visualization above shows how Cross Entropy Loss varies with the predicted probability for the correct class. As the probability for the correct class increases (moving right on the x-axis), the loss decreases. When the predicted probability approaches 1, the loss approaches zero, indicating a confident and accurate prediction. Conversely, lower probabilities for the correct class yield higher losses, pushing the model to learn from incorrect or less confident predictions. \n",
-    "\n",
-    "This behavior encourages the model to assign high probabilities to correct classes, making Cross Entropy Loss a powerful choice for classification tasks."
+    "The visualization above shows how Cross Entropy Loss varies with the predicted probability for the correct class."
    ]
   },
   {
