--- a/classification/classification_metrics.ipynb
+++ b/classification/classification_metrics.ipynb
@@ -45,19 +45,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can start with some definitions:\n",
+    "We can start with some definitions for a binary classification problem:\n",
     "\n",
     "- **True Positives (TP)**: Instances where the model correctly predicts the positive class. That is, cases where both the actual class and the predicted class are positive.\n",
     "\n",
     "- **True Negatives (TN)**: Instances where the model correctly predicts the negative class. That is, cases where both the actual class and the predicted class are negative.\n",
     "\n",
-    "Similarly, we have:\n",
-    "\n",
     "- **False Positives (FP)**: Instances where the model incorrectly predicts the positive class. These are cases where the actual class is negative, but the model predicts it as positive.\n",
     "\n",
-    "- **False Negatives (FN)**: Instances where the model incorrectly predicts the negative class. These are cases where the actual class is positive, but the model predicts it as negative.\n",
-    "\n",
-    "These concepts are crucial because they help us understand not just how often the model is correct, but the types of errors it makes."
+    "- **False Negatives (FN)**: Instances where the model incorrectly predicts the negative class. These are cases where the actual class is positive, but the model predicts it as negative."
    ]
   },
   {
